<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_call_center"
        android:orderInCategory="3"
        android:title="@string/call_center"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_sms_center"
        android:orderInCategory="4"
        android:title="@string/sms_center"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:orderInCategory="1"
        android:title="@string/lokasi_toko"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_user"
        android:icon="@drawable/ic_update_user"
        android:orderInCategory="2"
        android:title="@string/update_user_password"
        app:showAsAction="always" />
</menu>